--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
+# Virtual environment
 venv/
-venv/
-venv/
-venv/
-components/lid.176.bin
-venv/
+
+# Python cache
+__pycache__/
+*.pyc
+
+# Rasa logs
+logs/
